PUT de persona
